Se agrega animacion al png del Nombre de la Empresa y a las redes sociales

--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/favicon.png">
-    <link rel="stylesheet" href="css/estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title> Distribuidora - Wara Pallay</title>
 </head>
 <body>
     <header> <!-- Inicio del menú principal-->
-        <a href="index.html"><img src="./img/logo.png" alt="logo" width="400" class="logo"></a>    
+        <a href="index.html"><img src="./img/logo.png" alt="logo" width="500" class="animate__animated animate__lightSpeedInLeft" ></a>    
             <nav>
                 <ul>
-                 <li><a class="header__nav__enlace" href="index.html">Inicio</a></li>
-                 <li><a class="header__nav__enlace" href="./pages/nuestrosProductos.html">Nuestros Productos</a></li>
-                 <li><a class="header__nav__enlace" href="./pages/recetas.html">Recetas</a></li>
-                 <li><a class="header__nav__enlace" href="./pages/nuestrosClientes.html">Nuestros Clientes</a></li>
-                 <li><a class="header__nav__enlace" href="./pages/contacto.html">Contacto</a></li>
+                 <li><a class="header__nav__enlace" href="index.html"><span>Inicio</span></a></li>
+                 <li><a class="header__nav__enlace" href="./pages/nuestrosProductos.html"><span>Nuestros Productos</span> </a></li>
+                 <li><a class="header__nav__enlace" href="./pages/recetas.html"><span>Recetas</span></a></li>
+                 <li><a class="header__nav__enlace" href="./pages/nuestrosClientes.html"><span>Nuestros Clientes</span></a></li>
+                 <li><a class="header__nav__enlace" href="./pages/contacto.html"><span>Contacto</span></a></li>
                 </ul>
             </nav>
     </header> <!-- Fin del menú principal-->
@@ -35,7 +36,7 @@
                 Somos un emprendimiento familiar con más de 15 años de
                 trayectoria en el mercado, de la mano de la elaboración de
                 blends de té, especias, café de frutos del monte y pastas de
-                vegetales. <br>
+                vegetales.
                 Con los años fuimos incorporando distintas líneas de productos
                 gourmet, con distribución exclusiva: encurtidos Famiglia Gullo,
                 dulces patagónicos La Península, escabeches de carne Rincón de
@@ -43,7 +44,7 @@
                 Representamos líneas de productos gourmet, productos de
                 especialización, elaborados con materia prima de calidad, que
                 cumplen con las buenas prácticas de manufactura y que prestan
-                especial cuidado a los procesos de producción. <br>
+                especial cuidado a los procesos de producción.
                 Atendemos vinotecas, tiendas de delicatessen y especializadas,
                 locales gastronómicos. Distribuimos en toda la provincia de
                 Córdoba, Santa Fe, Santiago del Estero, Tucumán,
@@ -51,15 +52,16 @@
                  </p>      
             </div>
             <div class="imgWara">
-                <img class="fotoUno" src="./img/foto152.jpg" alt="Frasco de vidrio marca Tikay"height="350">
-                <img class="fotoDos" src="./img/foto151.jpg" alt="Frasco de vidrio marca Wara Pallay"height="350">
-                <img class="fotoTres" src="./img/foto87.jpg" alt="Especias marca Wara Pallay"height="350">
-                <img class="fotoCuatro" src="./img/foto63.jpg" alt="Grupo de latas de te marca Setare" height="350"> 
+                <img class="" src="./img/foto152.jpg" alt="Frasco de vidrio marca Tikay"height="350">
+                <img class="" src="./img/foto151.jpg" alt="Frasco de vidrio marca Wara Pallay"height="350">
+                <img class="" src="./img/foto87.jpg" alt="Especias marca Wara Pallay"height="350">
+                <img class="" src="./img/foto63.jpg" alt="Grupo de latas de te marca Setare" height="350"> 
            </div>
         </section>
         <section class="redesSociales"> <!--Redes Sociales-->
-            <a class="facebook" href="https://www.facebook.com/WaraPallay/" target="_blank"><img src="./img/facebook.png" alt="logoFacebook" height="49"></a>
-            <a href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="./img/instagram.png"  alt="logoIntagram" height="50"></a>
+            <div class="animate__animated animate__pulse"> 
+                <a href="https://www.facebook.com/WaraPallay/" target="_blank"><img src="./img/facebook.png" alt="logoFacebook" height="49"></a>
+                <a href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="./img/instagram.png"  alt="logoIntagram" height="50"></a> </div>
         </section> <!-- Fin del cuerpo de la pagina-->
     </main>
     <footer> <!-- Inicio del pie de pagina-->
