--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../img/favicon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Contacto - Wara Pallay</title>
 </head>
 <body>
     <header> <!-- Inicio del menú principal-->
-        <a href="../index.html"><img src="../img/logo.png" alt="logo" width="300" class="logo"></a> 
+        <a href="../index.html"><img src="../img/logo.png" alt="logo" width="500" class="animate__animated animate__lightSpeedInLeft" ></a>   
         <nav class="header__nav">
             <ul>
              <li><a class="header__nav__enlace" href="../index.html">Inicio</a></li>
