--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title> Distribuidora - Wara Pallay</title>
+    <title>Distribuidora - Wara Pallay</title>
 </head>
 <body>
     <header> <!-- Inicio del menú principal-->
@@ -59,9 +59,8 @@
            </div>
         </section>
         <section class="redesSociales"> <!--Redes Sociales-->
-            <div class="animate__animated animate__pulse"> 
                 <a href="https://www.facebook.com/WaraPallay/" target="_blank"><img src="./img/facebook.png" alt="logoFacebook" height="49"></a>
-                <a href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="./img/instagram.png"  alt="logoIntagram" height="50"></a> </div>
+                <a href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="./img/instagram.png"  alt="logoIntagram" height="50"></a>
         </section> <!-- Fin del cuerpo de la pagina-->
     </main>
     <footer> <!-- Inicio del pie de pagina-->
