Se agregaron cambios esteticos en los cuadros de texto, se agrego carrusel de imagentes y en logos de redes sociales

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 vegetales.
                 Con los años fuimos incorporando distintas líneas de productos
                 gourmet, con distribución exclusiva: encurtidos Famiglia Gullo,
-                dulces patagónicos La Península, escabeches de carne Rincón de
+                escabeches de carne Rincón de
                 Arturo, mostazas artesanales D'Gustar, entre otros.
                 Representamos líneas de productos gourmet, productos de
                 especialización, elaborados con materia prima de calidad, que
@@ -51,15 +51,43 @@
                 Corrientes y Buenos Aires.
                  </p>      
             </div>
-            <div class="imgWara">
-                <img class="" src="./img/foto152.jpg" alt="Frasco de vidrio marca Tikay"height="350">
-                <img class="" src="./img/foto151.jpg" alt="Frasco de vidrio marca Wara Pallay"height="350">
-                <img class="" src="./img/foto87.jpg" alt="Especias marca Wara Pallay"height="350">
-                <img class="" src="./img/foto63.jpg" alt="Grupo de latas de te marca Setare" height="350"> 
-           </div>
+              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./img/foto151.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/foto152.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/foto87.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/foto63.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+              <div class="cuadroTexto">
+                <h2>Delicatessen... ¿de dónde viene esta palabra?</h2>
+                <p>
+                La palabra "delicatessen" es de origen alemán. Es una palabra compuesta por "delikat", que significa delicioso o deliciosa, y "essen", que significa comida.
+                Usualmente, esta palabra se asocia a exquisiteces, alimentos de alta calidad o exóticos, ya sea por su rareza o por su gran calidad de ejecución. También se denomina así a la tienda donde pueden conseguirse este tipo de alimentos.
+                En resumen: delicatessen es todo aquello que conocemos como productos gourmet o un comercio dedicado a ellos
+                Wara Pallay es una distribuidora especializada en productos gourmet, y de alta gama, con amplia experiencia en el rubro. Trabajamos con líneas de excelente calidad, y ofrecemos nuestros servicios a tiendas de delicatessen, vinotecas y comercios gourmet.
+                </p>
+                
+              </div>
         </section>
         <section class="redesSociales"> <!--Redes Sociales-->
-                <a href="https://www.facebook.com/WaraPallay/" target="_blank"><img src="./img/facebook.png" alt="logoFacebook" height="49"></a>
+                <a class="facebook" href="https://www.facebook.com/WaraPallay/" target="_blank"><img src="./img/facebook.png" alt="logoFacebook" height="49"></a>
                 <a href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="./img/instagram.png"  alt="logoIntagram" height="50"></a>
         </section> <!-- Fin del cuerpo de la pagina-->
     </main>
