--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1> Distribuidora Wara Pallay</h1>
             <img src="./img/iniciocaja.png" alt="caja png" height="50">
         </section>
-        <section class="cuadro"> <!-- Agregar tabla y ajustar al lado izq.-->
+        <section class="cuadro">
             <div class="cuadroTexto">
                 <h2>Sobre nosotros...</h2>
                 <p>
@@ -96,7 +96,7 @@
         <h5>Contacto: gabriel_ortiz.1997@hotmail.com </h5>
         <h5>Todos los derechos reservados ® </h5>
 	</footer> <!-- Fin del pie de pagina-->
-    <!-- Poner dicho codigo siempre arriba del <body> -->
+    <!-- Poner este codigo siempre arriba del <body> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
