--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -35,36 +35,27 @@
             <div class="tarjeta">
                 <img src="../img/arrozconesp.jpg" alt="Foto de plato de arroz condimentado" height="200">
                 <h2> Arroz con especias chinas:</h2>
-                <p>Se denomina Especias Chinas a una mezcla de 5 especias muy tradicional en la cocina china, que incorpora los cinco sabores: dulce, acido, amargo, picante y salado. Contiene anís estrellado, pimienta de sichuan, canela cassia, clavo de olor y semillas de hinojo.<br>
-                    INGREDIENTES.<br>
-                    200 grs arroz basmati.<br>
-                    01 pimiento rojo mediano.<br>
-                    01 zanahoria.<br>
-                    01 cebolla.<br>
-                    01 puerro.<br>
-                    01 lata de arvejas.<br>
-                    01 diente de ajo.<br>
-                    01 cucharada de especias chinas Wara Pallay.<br>
-                    Aceite de oliva.<br>
-                    PREPARACIÓN:<br>
+                <p>Se denomina Especias Chinas a una mezcla de 5 especias muy tradicional en la cocina china, que incorpora los cinco sabores: dulce, acido, amargo, picante y salado. Contiene anís estrellado, pimienta de sichuan, canela cassia, clavo de olor y semillas de hinojo.
+                    INGREDIENTES: 200 grs arroz basmati, 01 pimiento rojo mediano, 01 zanahoria, 01 cebolla.01 puerro, 01 lata de arvejas, 01 diente de ajo, 01 cucharada de especias chinas Wara Pallay y Aceite de oliva.
+                    PREPARACIÓN:
                     Prepará el arroz en agua con sal y una cascarita de limón. En un sartén caliente añadí el ajo, luego la cebolla y el puerro. Dos minutos después, el pimiento y la zanahoria, todo cortado en pluma. Cuanto este todo cocido, agregar el arroz ya escurrido y las arvejas. Espolvorear con las especias chinas Wara Pallay, mezclar todo bien y servir.
                     </p>
                 </div>
                 <div class="tarjeta">
                     <img src="../img/arrozconesp.jpg" alt="Foto de plato de arroz condimentado" height="200">
                     <h2> Arroz con especias chinas:</h2>
-                    <p>Se denomina Especias Chinas a una mezcla de 5 especias muy tradicional en la cocina china, que incorpora los cinco sabores: dulce, acido, amargo, picante y salado. Contiene anís estrellado, pimienta de sichuan, canela cassia, clavo de olor y semillas de hinojo.<br>
-                    INGREDIENTES.<br>
-                    200 grs arroz basmati.<br>
-                    01 pimiento rojo mediano.<br>
-                    01 zanahoria.<br>
-                    01 cebolla.<br>
-                    01 puerro.<br>
-                    01 lata de arvejas.<br>
-                    01 diente de ajo.<br>
-                    01 cucharada de especias chinas Wara Pallay.<br>
-                    Aceite de oliva.<br>
-                    PREPARACIÓN:<br>
+                    <p>Se denomina Especias Chinas a una mezcla de 5 especias muy tradicional en la cocina china, que incorpora los cinco sabores: dulce, acido, amargo, picante y salado. Contiene anís estrellado, pimienta de sichuan, canela cassia, clavo de olor y semillas de hinojo.
+                    INGREDIENTES.
+                    200 grs arroz basmati.
+                    01 pimiento rojo mediano.
+                    01 zanahoria.
+                    01 cebolla.
+                    01 puerro.
+                    01 lata de arvejas.
+                    01 diente de ajo.
+                    01 cucharada de especias chinas Wara Pallay.
+                    Aceite de oliva.
+                    PREPARACIÓN:
                     Prepará el arroz en agua con sal y una cascarita de limón. En un sartén caliente añadí el ajo, luego la cebolla y el puerro. Dos minutos después, el pimiento y la zanahoria, todo cortado en pluma. Cuanto este todo cocido, agregar el arroz ya escurrido y las arvejas. Espolvorear con las especias chinas Wara Pallay, mezclar todo bien y servir.
                     </p>
                     </div>
