Se agrego pagina en recetas.html y cambios en Nuestros Productos.html

--- a/pages/nuestrosProductos.html
+++ b/pages/nuestrosProductos.html
@@ -24,12 +24,83 @@
          </nav>
     </header> <!-- Fin del menú principal-->
     <main>
-        <section class="titulosWara">
+        <section class="titulosWara"> 
             <img src="../img/especias.png" alt="dibujo de especias" width="50">
             <h1> Nuestros Productos</h1>
             <img src="../img/tazate.png" alt="dibujo taza de te" width="50">
-            
         </section>
+        <section> <!-- Inicio de la tabla de productos -->
+            <table class="table table-bordered border-warning">
+                <thead class="table-dark">
+                    <tr>
+                      <th scope="col">Codigo</th>
+                      <th scope="col">Nombre del Producto</th>
+                      <th scope="col">Descripcion del Producto</th>
+                      <th scope="col">Imagen</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">1</th>
+                      <td>Ajos Ahumados</td>
+                      <td>Ajos disecados, ahumados y molidos.</td>
+                      <td> --- </td>
+                    </tr>
+                    <tr>
+                      <th scope="row">2</th>
+                      <td>Baharat</td>
+                      <td>Pimienta negra, comino, coriandro, nuez
+                        moscada, cardamomo, canela y clavo de olor. </td>
+                      <td>---</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Blend para mariscos</td>
+                        <td>Semillas de eneldo, estragón y
+                            cáscaras de limón deshidratado.</td>
+                        <td>---</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">4</th>
+                        <td>Curry de Jamaica</td>
+                        <td>Coriandro, comino, mostaza en
+                            grano, semillas de anís, fenogreco, pimienta de Jamaica
+                            y cúrcuma, ají cayena y canela, todo tostado.</td>
+                        <td>---</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">5</th>
+                        <td>Curry de Madrás</td>
+                        <td>Coriandro, comino, mostaza negra
+                            en grano, canela, cardamomo, fenogreco, pimienta
+                            negra, cúrcuma, jengibre y paprika.</td>
+                        <td>---</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">6</th>
+                        <td>Curry Marroquí</td>
+                        <td>Cúrcuma, comino, coriandro, nuez
+                            moscada, canela, jengibre y clavo de olor.</td>
+                        <td>---</td>
+                      </tr>
+                      <tr>
+                          <th scope="row">7</th>
+                          <td>Especias Dulces</td>
+                          <td>Anís estrellado, pimienta de Sichuan,
+                            canela cassia china, clavo de olor y semillas de hinojo.</td>
+                          <td>---</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">8</th>
+                          <td>Especias para Wok</td>
+                          <td>Jengibre, coriandro, tomate,
+                            cebolla, ajo, semillas de sésamo, comino, anís, canela,
+                            cáscaras de limón, pimentón dulce y azúcar.</td>
+                          <td>---</td>
+                        </tr>
+                  </tbody>
+            </table>
+        </section> <!-- Fin de la tabla de productos -->
         <section class="redesSociales"> <!--Redes Sociales-->
             <a class="facebook" href="https://www.facebook.com/WaraPallay/" target="_blank"><img src="../img/facebook.png" alt="logoFacebook" width="49"> </a>
             <a class="animate__animated animate__pulse" href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="../img/instagram.png " alt="logoIntagram" width="50"> </a>
