--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -132,6 +132,16 @@
                             </p>
                             </div>
         </section>
+        <section> <!--Cambio de pestaña-->
+        <nav aria-label="">
+            <ul class="pagination">
+              <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="../pages/recetasPaginaDos.html">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+          </nav>
+        </section> <!--Cambio de pestaña-->
         <section class="redesSociales"> <!--Redes Sociales-->
             <a class="facebook" href="https://www.facebook.com/WaraPallay/" target="_blank"><img src="../img/facebook.png" alt="logoFacebook" width="49"> </a>
             <a href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="../img/instagram.png " alt="logoIntagram" width="50"> </a>
