--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -37,14 +37,14 @@
                 </p>
                 <iframe class="mapaDos" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d851.0286959469132!2d-64.12802387063903!3d-31.438506799999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432bd2176e5aa1f%3A0xa21144935854cb97!2zRWwgRm9ydMOtbiAyMTk4LCBDw7NyZG9iYQ!5e0!3m2!1sen!2sar!4v1657594569993!5m2!1sen!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section> <!-- Fin de seccion de Mapa-->
-            <section class="tituloContacto"> <!--Incio de tabla de contacto-->
+            <section class="tituloContacto">
             <img src="../img/clientetres.png" alt="cliente" width="50">
             <h2>¿Queres ser cliente?</h2>
             </section>
             <section class="subtituloContacto">
             <h4>Le solicitamos llene el formulario con sus datos y a la brevedad nos pondremos en contacto con usted.</h4>
             </section>
-            <section class="tablaDeContacto">
+            <!--<section class="tablaDeContacto">
             <form action="">
                 <section class="empresaNombre">
                     <label for="empresa"></label>
@@ -107,7 +107,74 @@
                     <input type="submit">
                 </section>
             </form>
-        </section> <!--Fin de tabla de contacto-->
+        </section> -->
+        <section class="tablaDeContacto">
+            <div class="row g-3">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Nombre de la Empresa/Negocio" aria-label="Empresa">
+                </div>
+            <div class="row g-3">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre">
+                </div>
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido">
+                </div>
+              </div>
+              <div class="row g-3">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Email" aria-label="Email">
+                </div>
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Teléfono" aria-label="Telefono">
+                </div>
+              </div>
+              <div class="row g-3">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Dirección Comercial" aria-label="Direccion Comercial">
+                </div>
+            </div>
+            <div class="row g-3">
+              <label class="visually-hidden" for="specificSizeSelect"></label>
+              <select class="form-select" id="specificSizeSelect">
+                <option selected>Provincia</option>
+                <option value="Caba">Capital Federal</option>
+                <option value="Buenos Aires">Bs. As.</option>
+                <option value="Catamarca">Catamarca</option>
+                <option value="Chaco">Chaco</option>
+                <option value="Chubut">Chubut</option>
+                <option value="Cordoba">Cordoba</option>
+                <option value="Corrientes">Corrientes</option>
+                <option value="Entre Rios">Entre Rios</option>
+                <option value="Formosa">Formosa</option>
+                <option value="Jujuy">Jujuy</option>
+                <option value="La Pampa">La Pampa</option>
+                <option value="La Rioja">La Rioja</option>
+                <option value="Mendoza">Mendoza</option>
+                <option value="Misiones">Misiones</option>
+                <option value="Neuquen">Neuquen</option>
+                <option value="Rio Negro">Rio Negro</option>
+                <option value="Salta">Salta</option>
+                <option value="San Juan">San Juan</option>
+                <option value="San Luis">San Luis</option>
+                <option value="Santa Cruz">Santa Cruz</option>
+                <option value="Santa Fe">Santa Fe</option>
+                <option value="Sgo. del Estero">Sgo. del Estero</option>
+                <option value="Tierra del Fuego">Tierra del Fuego</option>
+                <option value="Tucuman">Tucuman</option>
+              </select>
+            </div>
+            <div class="row g-3">
+                <input type="text" class="form-control" placeholder="Ciudad/Localidad" aria-label="Ciudad/Localidad">
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label"></label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"> Insertar comentario...</textarea>
+              </div>
+            <div class="col-auto">
+                <button type="submit" class="btn btn-primary">Enviar</button>
+              </div>
+        </section>
         <section class="redesSociales"> <!--Redes Sociales-->
             <a class="facebook" href="https://www.facebook.com/WaraPallay/" target="_blank"><img src="../img/facebook.png" alt="logoFacebook" width="49"> </a>
             <a href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="../img/instagram.png " alt="logoIntagram" width="50"> </a>
