Se agrego etiqueta span al resto de pestañas html

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,10 +15,10 @@
         <a href="../index.html"><img src="../img/logo.png" alt="logo" width="500" class="animate__animated animate__lightSpeedInLeft" ></a>   
         <nav class="header__nav">
             <ul>
-             <li><a class="header__nav__enlace" href="../index.html">Inicio</a></li>
-             <li><a class="header__nav__enlace" href="../pages/nuestrosProductos.html">Nuestros Productos</a></li>
-             <li><a class="header__nav__enlace" href="../pages/recetas.html">Recetas</a></li>
-             <li><a class="header__nav__enlace" href="../pages/nuestrosClientes.html">Nuestros Clientes</a></li>
+             <li><a class="header__nav__enlace" href="../index.html"><span>Inicio</span></a></li>
+             <li><a class="header__nav__enlace" href="../pages/nuestrosProductos.html"><span>Nuestros Productos</span></a></li>
+             <li><a class="header__nav__enlace" href="../pages/recetas.html"><span>Recetas</span></a></li>
+             <li><a class="header__nav__enlace" href="../pages/nuestrosClientes.html"><span>Nuestros Clientes</span></a></li>
              <li><a class="header__nav__enlace" href="#">Contacto</a></li>
          </nav>
     </header>
