--- a/pages/recetasPaginaDos.html
+++ b/pages/recetasPaginaDos.html
@@ -15,11 +15,11 @@
         <a href="../index.html"><img src="../img/logo.png" alt="logo" width="500" class="animate__animated animate__lightSpeedInLeft" ></a>      
         <nav class="header__nav">
             <ul>
-                <li><a class="header__nav__enlace" href="../index.html">Inicio</a></li>
-                <li><a class="header__nav__enlace" href="../pages/nuestrosProductos.html">Nuestros Productos</a></li>
-                <li><a class="header__nav__enlace" href="#">Recetas</a></li>
-                <li><a class="header__nav__enlace" href="../pages/nuestrosClientes.html">Nuestros Clientes</a></li>
-                <li><a class="header__nav__enlace" href="../pages/contacto.html">Contacto</a></li>
+                <li><a class="header__nav__enlace" href="../index.html"><span>Inicio</span></a></li>
+                <li><a class="header__nav__enlace" href="../pages/nuestrosProductos.html"><span>Nuestros Productos</span></a></li>
+                <li><a class="header__nav__enlace" href="#"><span>Recetas</span></a></li>
+                <li><a class="header__nav__enlace" href="../pages/nuestrosClientes.html"><span>Nuestros Clientes</span></a></li>
+                <li><a class="header__nav__enlace" href="../pages/contacto.html"><span>Contacto</span></a></li>
              </ul>
          </nav>
     </header> <!-- Fin del menú principal-->
