Se agrego boton flotante en todas las html

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
              <li><a class="header__nav__enlace" href="../pages/nuestrosProductos.html"><span>Nuestros Productos</span></a></li>
              <li><a class="header__nav__enlace" href="../pages/recetas.html"><span>Recetas</span></a></li>
              <li><a class="header__nav__enlace" href="../pages/nuestrosClientes.html"><span>Nuestros Clientes</span></a></li>
-             <li><a class="header__nav__enlace" href="#">Contacto</a></li>
+             <li><a class="header__nav__enlace" href="#"><span>Contacto</span></a></li>
          </nav>
     </header>
     <!-- Fin del menú principal-->
@@ -44,7 +44,7 @@
             <section class="subtituloContacto">
             <h4>Le solicitamos llene el formulario con sus datos y a la brevedad nos pondremos en contacto con usted.</h4>
             </section>
-            <!--<section class="tablaDeContacto">
+            <section class="tablaDeContacto">
             <form action="">
                 <section class="empresaNombre">
                     <label for="empresa"></label>
@@ -107,78 +107,14 @@
                     <input type="submit">
                 </section>
             </form>
-        </section> -->
-        <section class="tablaDeContacto">
-            <div class="row g-3">
-                <div class="col">
-                  <input type="text" class="form-control" placeholder="Nombre de la Empresa/Negocio" aria-label="Empresa">
-                </div>
-            <div class="row g-3">
-                <div class="col">
-                  <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre">
-                </div>
-                <div class="col">
-                  <input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido">
-                </div>
-              </div>
-              <div class="row g-3">
-                <div class="col">
-                  <input type="text" class="form-control" placeholder="Email" aria-label="Email">
-                </div>
-                <div class="col">
-                  <input type="text" class="form-control" placeholder="Teléfono" aria-label="Telefono">
-                </div>
-              </div>
-              <div class="row g-3">
-                <div class="col">
-                  <input type="text" class="form-control" placeholder="Dirección Comercial" aria-label="Direccion Comercial">
-                </div>
-            </div>
-            <div class="row g-3">
-              <label class="visually-hidden" for="specificSizeSelect"></label>
-              <select class="form-select" id="specificSizeSelect">
-                <option selected>Provincia</option>
-                <option value="Caba">Capital Federal</option>
-                <option value="Buenos Aires">Bs. As.</option>
-                <option value="Catamarca">Catamarca</option>
-                <option value="Chaco">Chaco</option>
-                <option value="Chubut">Chubut</option>
-                <option value="Cordoba">Cordoba</option>
-                <option value="Corrientes">Corrientes</option>
-                <option value="Entre Rios">Entre Rios</option>
-                <option value="Formosa">Formosa</option>
-                <option value="Jujuy">Jujuy</option>
-                <option value="La Pampa">La Pampa</option>
-                <option value="La Rioja">La Rioja</option>
-                <option value="Mendoza">Mendoza</option>
-                <option value="Misiones">Misiones</option>
-                <option value="Neuquen">Neuquen</option>
-                <option value="Rio Negro">Rio Negro</option>
-                <option value="Salta">Salta</option>
-                <option value="San Juan">San Juan</option>
-                <option value="San Luis">San Luis</option>
-                <option value="Santa Cruz">Santa Cruz</option>
-                <option value="Santa Fe">Santa Fe</option>
-                <option value="Sgo. del Estero">Sgo. del Estero</option>
-                <option value="Tierra del Fuego">Tierra del Fuego</option>
-                <option value="Tucuman">Tucuman</option>
-              </select>
-            </div>
-            <div class="row g-3">
-                <input type="text" class="form-control" placeholder="Ciudad/Localidad" aria-label="Ciudad/Localidad">
-              </div>
-              <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label"></label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"> Insertar comentario...</textarea>
-              </div>
-            <div class="col-auto">
-                <button type="submit" class="btn btn-primary">Enviar</button>
-              </div>
-        </section>
+        </section> 
         <section class="redesSociales"> <!--Redes Sociales-->
             <a class="facebook" href="https://www.facebook.com/WaraPallay/" target="_blank"><img src="../img/facebook.png" alt="logoFacebook" width="49"> </a>
             <a href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="../img/instagram.png " alt="logoIntagram" width="50"> </a>
         </section>
+        <section> <!-- Boton flotante de WhatsApp -->
+            <a href="https://api.whatsapp.com/send?phone=3516834536" target="_blank"><img src="./img/whatsapp.png" alt="whatsapp icon" class="btn_wsp"></a>  
+          </section> <!-- Boton flotante de WhatsApp -->
         </main>
         <footer> <!--Inicio del pie de pagina-->
             <h5>Autor: Ortiz Gabriel Jesus, estudiante en Coder House, curso de Desarrollo Web </h5>
