--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -101,6 +101,9 @@
             <a class="facebook" href="https://www.facebook.com/WaraPallay/" target="_blank"><img src="../img/facebook.png" alt="logoFacebook" width="49"> </a>
             <a href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="../img/instagram.png " alt="logoIntagram" width="50"> </a>
         </section>
+        <section> <!-- Boton flotante de WhatsApp -->
+            <a href="https://api.whatsapp.com/send?phone=3516834536" target="_blank"><img src="./img/whatsapp.png" alt="whatsapp icon" class="btn_wsp"></a>  
+          </section> <!-- Boton flotante de WhatsApp -->
     </main>
     <footer> <!--Inicio del pie de pagina-->
 		<h5>Autor: Ortiz Gabriel Jesus, estudiante en Coder House, curso de Desarrollo Web </h5>
