Se agregago diseño responsive a la pagina, no funciona

--- a/pages/nuestrosProductos.html
+++ b/pages/nuestrosProductos.html
@@ -106,7 +106,7 @@
             <a class="animate__animated animate__pulse" href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="../img/instagram.png " alt="logoIntagram" width="50"> </a>
         </section>
         <section> <!-- Boton flotante de WhatsApp -->
-          <a href="https://api.whatsapp.com/send?phone=3516834536" target="_blank"><img src="./img/whatsapp.png" alt="whatsapp icon" class="btn_wsp"></a>  
+          <a href="https://api.whatsapp.com/send?phone=3516834536" target="_blank"><img src="../img/whatsapp.png" alt="whatsapp icon" class="btn_wsp"></a>  
         </section> <!-- Boton flotante de WhatsApp -->
     </main>
     <footer> <!-- Inicio del pie de pagina-->
