--- a/pages/nuestrosClientes.html
+++ b/pages/nuestrosClientes.html
@@ -18,7 +18,7 @@
                 <li><a class="header__nav__enlace" href="../index.html"><span>Inicio</span></a></li>
                 <li><a class="header__nav__enlace" href="../pages/nuestrosProductos.html"><span>Nuestros Productos</span></a></li>
                 <li><a class="header__nav__enlace" href="../pages/recetas.html"><span>Recetas</span></a></li>
-                <li><a class="header__nav__enlace" href="#"><span>Clientes</span></a></li>
+                <li><a class="header__nav__enlace" href="#"><span>Nuestros Clientes</span></a></li>
                 <li><a class="header__nav__enlace" href="../pages/contacto.html"><span>Contacto</span></a></li>
              </ul>
          </nav>
@@ -34,7 +34,7 @@
             <a href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="../img/instagram.png " alt="logoIntagram" width="50"> </a>
         </section>
         <section> <!-- Boton flotante de WhatsApp -->
-            <a href="https://api.whatsapp.com/send?phone=3516834536" target="_blank"><img src="./img/whatsapp.png" alt="whatsapp icon" class="btn_wsp"></a>  
+            <a href="https://api.whatsapp.com/send?phone=3516834536" target="_blank"><img src="../img/whatsapp.png" alt="whatsapp icon" class="btn_wsp"></a>  
           </section> <!-- Boton flotante de WhatsApp -->
     </main>
     <footer> <!-- Inicio del pie de pagina-->
