--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header> <!-- Inicio del menú principal-->
-        <a href="../index.html"><img src="../img/logo.png" alt="logo" width="500" class="animate__animated animate__lightSpeedInLeft" ></a>      
+        <a href="../index.html"><img src="../img/logo.png" alt="logo" width="400" class="animate__animated animate__lightSpeedInLeft" ></a>      
         <nav class="header__nav">
             <ul>
                 <li><a class="header__nav__enlace" href="../index.html"><span>Inicio</span></a></li>
@@ -102,7 +102,7 @@
             <a href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="../img/instagram.png " alt="logoIntagram" width="50"> </a>
         </section>
         <section> <!-- Boton flotante de WhatsApp -->
-            <a href="https://api.whatsapp.com/send?phone=3516834536" target="_blank"><img src="./img/whatsapp.png" alt="whatsapp icon" class="btn_wsp"></a>  
+            <a href="https://api.whatsapp.com/send?phone=3516834536" target="_blank"><img src="../img/whatsapp.png" alt="whatsapp icon" class="btn_wsp"></a>  
           </section> <!-- Boton flotante de WhatsApp -->
     </main>
     <footer> <!--Inicio del pie de pagina-->
