--- a/pages/nuestrosClientes.html
+++ b/pages/nuestrosClientes.html
@@ -42,5 +42,7 @@
         <h5>Contacto: gabriel_ortiz.1997@hotmail.com </h5>
         <h5>Todos los derechos reservados ® </h5>
 	</footer> <!-- Fin del pie de pagina-->
+    <!-- Poner este codigo siempre arriba del <body> -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
