--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,15 +12,34 @@
 </head>
 <body>
     <header> <!-- Inicio del menú principal-->
-        <a href="../index.html"><img src="../img/logo.png" alt="logo" width="500" class="animate__animated animate__lightSpeedInLeft" ></a>   
-        <nav class="header__nav">
-            <ul>
-             <li><a class="header__nav__enlace" href="../index.html"><span>Inicio</span></a></li>
-             <li><a class="header__nav__enlace" href="../pages/nuestrosProductos.html"><span>Nuestros Productos</span></a></li>
-             <li><a class="header__nav__enlace" href="../pages/recetas.html"><span>Recetas</span></a></li>
-             <li><a class="header__nav__enlace" href="../pages/nuestrosClientes.html"><span>Nuestros Clientes</span></a></li>
-             <li><a class="header__nav__enlace" href="#"><span>Contacto</span></a></li>
-         </nav>
+        <a href="../index.html"><img src="../img/logo.png" alt="logo" width="400" class="animate__animated animate__lightSpeedInLeft" ></a>    
+          <nav class="navbar navbar-expand-xl navbar-light bg-orange">
+            <div class="container-fluid">
+              <a class="navbar-brand"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto mb-0 mb-lg-2">
+                  <li class="nav-item mx-1 mb-1">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item mx-1 mb-1">
+                    <a class="nav-link" href="../pages/nuestrosProductos.html">Nuestros Productos</a>
+                  </li>
+                  <li class="nav-item mx-1 mb-1">
+                    <a class="nav-link" href="#">Recetas</a>
+                  </li>
+                  <li class="nav-item mx-1 mb-1">
+                    <a class="nav-link" href="../pages/nuestrosClientes.html">Nuestros Clientes</a>
+                  </li>
+                  <li class="nav-item mx-1 mb-1">
+                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <!-- Fin del menú principal-->
         <main>
