--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -12,16 +12,34 @@
 </head>
 <body>
     <header> <!-- Inicio del menú principal-->
-        <a href="../index.html"><img src="../img/logo.png" alt="logo" width="400" class="animate__animated animate__lightSpeedInLeft" ></a>      
-        <nav class="header__nav">
-            <ul>
-                <li><a class="header__nav__enlace" href="../index.html"><span>Inicio</span></a></li>
-                <li><a class="header__nav__enlace" href="../pages/nuestrosProductos.html"><span>Nuestros Productos</span></a></li>
-                <li><a class="header__nav__enlace" href="#"><span>Recetas</span></a></li>
-                <li><a class="header__nav__enlace" href="../pages/nuestrosClientes.html"><span>Nuestros Clientes</span></a></li>
-                <li><a class="header__nav__enlace" href="../pages/contacto.html"><span>Contacto</span></a></li>
-             </ul>
-         </nav>
+        <a href="../index.html"><img src="../img/logo.png" alt="logo" width="400" class="animate__animated animate__lightSpeedInLeft" ></a>    
+          <nav class="navbar navbar-expand-xl navbar-light bg-orange">
+            <div class="container-fluid">
+              <a class="navbar-brand"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto mb-0 mb-lg-2">
+                  <li class="nav-item mx-1 mb-1">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item mx-1 mb-1">
+                    <a class="nav-link" href="../pages/nuestrosProductos.html">Nuestros Productos</a>
+                  </li>
+                  <li class="nav-item mx-1 mb-1">
+                    <a class="nav-link" href="#">Recetas</a>
+                  </li>
+                  <li class="nav-item mx-1 mb-1">
+                    <a class="nav-link" href="../pages/nuestrosClientes.html">Nuestros Clientes</a>
+                  </li>
+                  <li class="nav-item mx-1 mb-1">
+                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header> <!-- Fin del menú principal-->
     <main> 
         <section> <!--Subtitulo de la pagina-->
@@ -88,14 +106,14 @@
                 </div>
         </section>
         <section> <!--Cambio de pestaña-->
-        <nav aria-label="">
+        <div aria-label="">
             <ul class="pagination">
-              <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+              <li class="previous"><a class="page-link" href="#">&laquo; Anterior</a></li>
               <li class="page-item"><a class="page-link" href="#">1</a></li>
               <li class="page-item"><a class="page-link" href="../pages/recetasPaginaDos.html">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">Next</a></li>
+              <li class="next"><a class="page-link" href="#">Siguiente &raquo;</a></li>
             </ul>
-          </nav>
+        </div>
         </section> <!--Cambio de pestaña-->
         <section class="redesSociales"> <!--Redes Sociales-->
             <a class="facebook" href="https://www.facebook.com/WaraPallay/" target="_blank"><img src="../img/facebook.png" alt="logoFacebook" width="49"> </a>
@@ -111,6 +129,6 @@
         <h5>Todos los derechos reservados ® </h5>
 	</footer> <!-- Fin del pie de pagina-->
     <!-- Poner este codigo siempre arriba del <body> -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
