--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,13 +28,13 @@
                     <a class="nav-link" href="../pages/nuestrosProductos.html">Nuestros Productos</a>
                   </li>
                   <li class="nav-item mx-1 mb-1">
-                    <a class="nav-link" href="#">Recetas</a>
+                    <a class="nav-link" href="../pages/recetas.html">Recetas</a>
                   </li>
                   <li class="nav-item mx-1 mb-1">
                     <a class="nav-link" href="../pages/nuestrosClientes.html">Nuestros Clientes</a>
                   </li>
                   <li class="nav-item mx-1 mb-1">
-                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="#">Contacto</a>
                   </li>
                 </ul>
               </div>
