--- a/pages/nuestrosClientes.html
+++ b/pages/nuestrosClientes.html
@@ -28,10 +28,10 @@
                   <a class="nav-link" href="../pages/nuestrosProductos.html">Nuestros Productos</a>
                 </li>
                 <li class="nav-item mx-1 mb-1">
-                  <a class="nav-link" href="#">Recetas</a>
+                  <a class="nav-link" href="../pages/recetas.html">Recetas</a>
                 </li>
                 <li class="nav-item mx-1 mb-1">
-                  <a class="nav-link" href="../pages/nuestrosClientes.html">Nuestros Clientes</a>
+                  <a class="nav-link" href="#">Nuestros Clientes</a>
                 </li>
                 <li class="nav-item mx-1 mb-1">
                   <a class="nav-link" href="../pages/contacto.html">Contacto</a>
