--- a/pages/nuestrosProductos.html
+++ b/pages/nuestrosProductos.html
@@ -25,10 +25,10 @@
                 <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item mx-1 mb-1">
-                <a class="nav-link" href="../pages/nuestrosProductos.html">Nuestros Productos</a>
+                <a class="nav-link" href="#">Nuestros Productos</a>
               </li>
               <li class="nav-item mx-1 mb-1">
-                <a class="nav-link" href="#">Recetas</a>
+                <a class="nav-link" href="../pages/recetas.html">Recetas</a>
               </li>
               <li class="nav-item mx-1 mb-1">
                 <a class="nav-link" href="../pages/nuestrosClientes.html">Nuestros Clientes</a>
