--- a/pages/recetasPaginaDos.html
+++ b/pages/recetasPaginaDos.html
@@ -28,7 +28,7 @@
                   <a class="nav-link" href="../pages/nuestrosProductos.html">Nuestros Productos</a>
                 </li>
                 <li class="nav-item mx-1 mb-1">
-                  <a class="nav-link" href="#">Recetas</a>
+                  <a class="nav-link" href="../pages/recetas.html">Recetas</a>
                 </li>
                 <li class="nav-item mx-1 mb-1">
                   <a class="nav-link" href="../pages/nuestrosClientes.html">Nuestros Clientes</a>
