--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -16,7 +16,7 @@
           <nav class="navbar navbar-expand-xl navbar-light bg-orange">
             <div class="container-fluid">
               <a class="navbar-brand"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -108,10 +108,10 @@
         <section> <!--Cambio de pestaña-->
         <div aria-label="">
             <ul class="pagination">
-              <li class="previous"><a class="page-link" href="#">&laquo; Anterior</a></li>
-              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item disabled"><a class="page-link" href="#">&laquo; Anterior</a></li>
+              <li class="page-item active"><a class="page-link" href="#">1</a></li>
               <li class="page-item"><a class="page-link" href="../pages/recetasPaginaDos.html">2</a></li>
-              <li class="next"><a class="page-link" href="#">Siguiente &raquo;</a></li>
+              <li class="page-item"><a class="page-link" href="../pages/recetasPaginaDos.html">Siguiente &raquo;</a></li>
             </ul>
         </div>
         </section> <!--Cambio de pestaña-->
