Se realizaron cambios en nuestrosProductos.html

--- a/pages/nuestrosProductos.html
+++ b/pages/nuestrosProductos.html
@@ -47,8 +47,25 @@
             <h1> Nuestros Productos</h1>
             <img src="../img/tazate.png" alt="dibujo taza de te" width="50">
         </section>
-        <section> <!-- Inicio de la tabla de productos -->
-            <table class="table table-bordered border-warning">
+        <section class="subtituloEspecias">
+          <h2>Blends de Especias</h2>
+          <h3>Wara Pallay es un emprendimiento familiar que recupera recetas
+            tradicionales de blends de especias, al mismo tiempo que elabora
+            otras de diseño de autor. Buscamos revalorizar hierbas
+            autóctonas, de la mano de mezclas como el "Chimi de Jarilla" o el
+            "Chimi de la Puna".
+            Usamos ingredientes nobles y sanos, obteniendo como resultado
+            un producto artesanal y natural, sin químicos ni conservantes.</h3>
+        </section>
+        <section class="productosEspeciasTubo">
+            <img src="../img/especiasdos.png" alt="tubos de especias"
+            width="50">
+            <h2>Sabores presentados en tubos</h2> 
+            <img src="../img/especiasdos.png" alt="tubos de especias"
+            width="50">
+        </section>
+        <section class="mx-5"> <!-- Inicio de la tabla de productos -->
+            <table class="table table-bordered border-warning table-hover">
                 <thead class="table-dark">
                     <tr>
                       <th scope="col">Codigo</th>
@@ -102,20 +119,20 @@
                         <td>---</td>
                       </tr>
                       <tr>
-                          <th scope="row">7</th>
-                          <td>Especias Dulces</td>
-                          <td>Anís estrellado, pimienta de Sichuan,
-                            canela cassia china, clavo de olor y semillas de hinojo.</td>
-                          <td>---</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">8</th>
-                          <td>Especias para Wok</td>
-                          <td>Jengibre, coriandro, tomate,
+                        <th scope="row">7</th>
+                        <td>Especias Dulces</td>
+                        <td>Anís estrellado, pimienta de Sichuan,
+                          canela cassia china, clavo de olor y semillas de hinojo.</td>
+                        <td>---</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">8</th>
+                        <td>Especias para Wok</td>
+                        <td>Jengibre, coriandro, tomate,
                             cebolla, ajo, semillas de sésamo, comino, anís, canela,
                             cáscaras de limón, pimentón dulce y azúcar.</td>
-                          <td>---</td>
-                        </tr>
+                        <td>---</td>
+                      </tr>
                   </tbody>
             </table>
         </section> <!-- Fin de la tabla de productos -->
