Se agrego animacion en nav y contenido en Nuestros Clientes

--- a/pages/nuestrosClientes.html
+++ b/pages/nuestrosClientes.html
@@ -47,6 +47,54 @@
             <h1> Nuestros Clientes</h1>
             <img src="../img/clientedos.png" alt="cliente" width="50">
         </section>
+        <section class="nuestrosClientes">
+          <div class="card border-warning mb-3" style="max-width: 16.5rem;">
+            <div><a href="https://www.instagram.com/brie.lacumbre/?hl=en" target="_blank"><img src="../img/brielacumbre.png" alt="Logo de comercio, Brie." width="260"></a></div>
+            <div class="card-body">
+              <h5 class="card-title">Brie</h5>
+              <p class="card-text">Almacen gourmet ubicado en la localidad de La Cumbre entre las calles Lopez y Planes y 25 de Mayo.</p>
+            </div>
+          </div>
+          <div class="card border-warning mb-3" style="max-width: 16.5rem;">
+            <div><a href="https://www.instagram.com/ramonadeliciasdelvalle/?hl=en" target="_blank"><img src="../img/ramonavgbelgrano.png" alt="Logo de comercio, Ramona." width="260"></a></div>
+            <div class="card-body">
+              <h5 class="card-title">Ramona Delicias del Valle</h5>
+              <p class="card-text">Elaborador dulces, licores y escabeches de primera calidad, con su fabrica ubicada en la localidad de Villa General Belgrano en la calle San Martin 887 y local centrico en San Martin 395.
+              </p>
+            </div>
+          </div>
+          <div class="card border-warning mb-3" style="max-width: 16.5rem;">
+            <div><a href="https://www.instagram.com/polser_burgers/?hl=en" target="_blank"><img src="../img/polser.png" alt="Logo de comercio, Polser." width="262"></a></div>
+            <div class="card-body">
+              <h5 class="card-title">PØLSER - Burgers & Dogs</h5>
+              <p class="card-text">Local gastronómico de comida rapida con sucursales en barrio Alta Córdoba en la calle Isabel la Católica 809 y barrio Nueva Córdoba en la calle Fructuoso Rivera 164.</p>
+            </div>
+          </div>
+        </div>
+        <div class="card border-warning mb-3" style="max-width: 16.5rem;">
+          <div><a href="https://www.instagram.com/ottiliacerveza/?hl=en" target="_blank"><img src="../img/ottilia.png" alt="Logo de comercio, Ottilia." width="262"></a></div>
+          <div class="card-body">
+            <h5 class="card-title">Ottilia, cerveza artesanal.</h5>
+            <p class="card-text">Fábrica de cerveza al estilo alemán ubicado en la localidad de Villa General Belgrano en la calle Avenida Roca 277.</p>
+          </div>
+        </div>
+        <div class="card border-warning mb-3" style="max-width: 16.5rem;">
+          <div><a href="https://www.instagram.com/almacendemario/?hl=en" target="_blank"><img src="../img/almacendemario" alt="Logo de comercio, Almacen de Mario." width="262"></a></div>
+          <div class="card-body">
+            <h5 class="card-title">Almacen de Mario</h5>
+            <p class="card-text">Local ubicado barrio Centro en la calle Dean Funes 163.</p>
+          </div>
+        </div>
+        <div class="card border-warning mb-3" style="max-width: 16.5rem;">
+          <div><a href="https://www.instagram.com/sabores.camperos/?hl=en" target="_blank"><img src="../img/saborescamperos.jpg" alt="Logo de comercio, Sabores Camperos." width="262"></a></div>
+          <div class="card-body">
+            <h5 class="card-title">Sabores Camperos</h5>
+            <p class="card-text">Local de Delicatesen ubicado en la localidad de Villa Allende en la calle Pres. Perón 145.</p>
+          </div>
+        </div>
+        </section>
+
+
         <section class="redesSociales"> <!--Redes Sociales-->
             <a class="facebook" href="https://www.facebook.com/WaraPallay/" target="_blank"><img src="../img/facebook.png" alt="logoFacebook" width="49"> </a>
             <a href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="../img/instagram.png " alt="logoIntagram" width="50"> </a>
