Se agrega @extend en Contacto y Nuestros Productos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -59,6 +59,7 @@
             <section class="tituloContacto"> <!-- Inicio de Formulario -->
             <img src="../img/clientetres.png" alt="cliente" width="50">
             <h2>¿Queres ser cliente?</h2>
+            <img src="../img/clientecuatro.png" alt="cliente" width="50">
             </section>
             <section class="subtituloContacto">
             <h4>Le solicitamos llene el formulario con sus datos y a la brevedad nos pondremos en contacto con usted.</h4>
